# nam_explorer

./: MANIFEST.in  README.md  pyproject.toml
experiments/housing/: app.py  train_housing.py
experiments/housing/components/: nam_explanation.py  shape_function_plot.py
experiments/housing/models/: nam_housing_32_5.pth  nam_housing_5_2.pth
src/: __init__.py  main.py  train.py
src/nam/: __init__.py  visualization.py
src/nam_explorer/: __init__.py  train.py
