[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nam"
version = "0.1.0"
description = "Machine learning nam package to train and explore existing nam models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.42.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
]
[tool.hatch.build.targets.wheel]
packages = ["src/nam"]